cabal-version:       2.2

name:                aoc2023
version:             0.1.0.0
homepage:            https://github.com/EthanWelsh/aoc2023#readme
license:             Unlicense
license-file:        LICENSE
author:              Ethan Welsh
maintainer:          example@example.com
copyright:           2023 Ethan Welsh
category:            Web
build-type:          Simple
extra-source-files:  README.md

executable aoc2023
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       ParserUtils
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , megaparsec >= 9.0 && < 10
                     , extra
                     , containers
                     , vector-algorithms
                     , vector
                     , data-interval
                     , hashmap
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
